Cleaned CSS code

--- a/NewYork/index.html
+++ b/NewYork/index.html
@@ -9,8 +9,11 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="img/N.jpg" class="left"></a>
-        <div><h1>New York</h1></div>
+            <img src="img/N.jpg" class="left">
+        </a>
+        
+        <h1>New York</h1>
+        
         <img src="img/y.jpg" class="right">
     </header>
 
