Updated JavaScript assignments

--- a/Grid/grid.html
+++ b/Grid/grid.html
@@ -36,5 +36,13 @@
             <h2>FOOTER</h2>
         </footer>
     </div>
+
+
+    <a href="https://www.facebook.com/ourpage" id="sociallink">Facebook side</a>
+
+
+
+    <script src="grid.js"></script>
+
 </body>
 </html>
