--- a/JavaScript/Slideshow/js-slideshow.html
+++ b/JavaScript/Slideshow/js-slideshow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="js-slideshow.css" rel="stylesheet" type="text/css">
+    <link href="css/js-slideshow.css" rel="stylesheet" type="text/css">
     <title>JavaScript offcanvas menu</title>
 </head>
 <body>
@@ -23,6 +23,6 @@
 
     
     
-    <script src="js-slideshow.js"></script>
+    <script src="js/js-slideshow.js"></script>
 </body>
 </html>
