Redeploying - commit all changes

--- a/Grid-Loesning/grid.html
+++ b/Grid-Loesning/grid.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="grid.css" type="text/css">
-    <title>Grid opgave 1</title>
+    <title>Grid introduktionsopgave</title>
 </head>
 <body>
-    <header class="griditem">
+    <header>
         <h2>HEADER</h2>
     </header>
-    <aside class="griditem">
+    <nav>
+        <h2>MENU 1</h2>
+    </nav>
+    <div>
+        <h2>MENU 2</h2>
+    </div>
+    <aside>
         <h2>SIDE 1</h2>
     </aside>
-    <nav class="griditem">
-        <h2>MENU</h2>
-    </nav>
-    <main class="griditem">
+    <main>
         <h2>MAIN</h2>
         <section>
             <h3>Lorem ipsum 1</h3>
@@ -28,10 +31,10 @@
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
         </section>
     </main>
-    <aside class="griditem">
+    <aside>
         <h2>SIDE 2</h2>
     </aside>
-    <footer class="griditem">
+    <footer>
         <h2>FOOTER</h2>
     </footer>
 
