--- a/JavaScript/Tabbed-menu/js-tabbedmenu.html
+++ b/JavaScript/Tabbed-menu/js-tabbedmenu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="js-tabbedmenu.css" type="text/css" rel="stylesheet">
+    <link href="css/js-tabbedmenu.css" type="text/css" rel="stylesheet">
     <title>JavaScript tabbed menu</title>
 </head>
 <body>
@@ -47,6 +47,6 @@
                 </div>
             </div>
         </nav>
-        <script src="js-tabbedmenu.js"></script>
+        <script src="js/js-tabbedmenu.js"></script>
 </body>
 </html>
