Opdateret materiale til selvstudie

--- a/NewYork-CSSVariables/advices.html
+++ b/NewYork-CSSVariables/advices.html
@@ -6,12 +6,13 @@
     <link a href="css/style.css" type="text/css" rel="stylesheet">
     <title>New York</title>
 </head>
-<body>
+<body class="lightTheme">
     <header>
-        <a href="index.html">
-            <img src="img/N.jpg"></a>
-        <div><h1>New York</h1></div>
-        <img src="img/y.jpg">
+        <div class="headerLetter">
+            <a href="index.html"><h1>N</h1></a>
+        </div>
+        <div><h1><a href="index.html">New York</a></h1></div>
+        <div class="headerLetter"><h1>Y</h1></div>
     </header>
 
     <nav>
