--- a/NewYork-CSSVariables/index.html
+++ b/NewYork-CSSVariables/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <img src="img/N.jpg"></a>
-        <div><h1>New York</h1></div>
-        <img src="img/y.jpg">
+        <div class="headerLetter">
+            <a href="index.html"><h1>N</h1></a>
+        </div>
+        <div><h1><a href="index.html">New York</a></h1></div>
+        <div class="headerLetter"><h1>Y</h1></div>
     </header>
 
     <nav>
