Opdateret RWD opgave

--- a/Eksamen/FrugtOgFastFood/opskrifter.html
+++ b/Eksamen/FrugtOgFastFood/opskrifter.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-                <a href="#top">Til toppen</a>
+                <a href="#">Til toppen</a>
             </article>
 
             <article id="kikaerteboeffer">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
 
-                <a href="#top">Til toppen</a>
+                <a href="#">Til toppen</a>
             </article>
             <article id="fladbroed">
                 <h3>Marokkansk fladbrød</h3>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
 
-                <a href="#top">Til toppen</a>
+                <a href="#">Til toppen</a>
             </article>
         </section>
         <section class="sidebar">
