--- a/Eksamen/NikeProShop/index.html
+++ b/Eksamen/NikeProShop/index.html
@@ -33,13 +33,13 @@
         </ul>
     </nav>
     <header class="slideshow">
-        <img src="img/Slideshow-image-1.jpg" class="show" alt="BMW billede">
-        <img src="img/Slideshow-image-2.jpg" alt="BMW billede">
-        <img src="img/Slideshow-image-3.jpg" alt="BMW billede">
+        <!-- <img src="img/Slideshow-image-1.jpg" class="show" alt="BMW billede">
+        <img src="img/Slideshow-image-2.jpg" alt="BMW billede"> -->
+       <img src="img/Slideshow-image-3.jpg" alt="BMW billede">
 
-        <div class="dotarea">
+        <!--  <div class="dotarea"> 
 
-        </div>
+        </div>-->
     </header>
     <main>
         <section>
@@ -142,6 +142,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
