--- a/Eksamen/NikeProShop/kontakt.html
+++ b/Eksamen/NikeProShop/kontakt.html
@@ -33,13 +33,13 @@
         </ul>
     </nav>
     <header class="slideshow">
-        <img src="img/Slideshow-image-1.jpg" class="show" alt="BMW billede">
-        <img src="img/Slideshow-image-2.jpg" alt="BMW billede">
+        <!-- <img src="img/Slideshow-image-1.jpg" class="show" alt="BMW billede">
+        <img src="img/Slideshow-image-2.jpg" alt="BMW billede"> -->
         <img src="img/Slideshow-image-3.jpg" alt="BMW billede">
 
-        <div class="dotarea">
+        <!--  <div class="dotarea"> 
 
-        </div>
+        </div>-->
     </header>
     <main>
         <section>
@@ -61,6 +61,7 @@
                         Telefon: (+45) 33 91 18 18<br>
                         E-mail: online@NikeProShop.dk
                     </p>
+                    <br>
                     <h2>Fortrydelsesret</h2>
                     <p>
                         Du har 30 dages fortrydelsesret. Det gør sig både gældende ved køb i vores fysiske shops og på vores webshop. Fortrydelsesretten løber fra den dag, du foretager dit køb i butikken eller modtager din webordre.
