--- a/Eksamen/NikeProShop/om.html
+++ b/Eksamen/NikeProShop/om.html
@@ -33,13 +33,13 @@
         </ul>
     </nav>
     <header class="slideshow">
-        <img src="img/Slideshow-image-1.jpg" class="show" alt="BMW billede">
-        <img src="img/Slideshow-image-2.jpg" alt="BMW billede">
+        <!-- <img src="img/Slideshow-image-1.jpg" class="show" alt="BMW billede">
+        <img src="img/Slideshow-image-2.jpg" alt="BMW billede"> -->
         <img src="img/Slideshow-image-3.jpg" alt="BMW billede">
 
-        <div class="dotarea">
+        <!--  <div class="dotarea"> 
 
-        </div>
+        </div>-->
     </header>
     <main>
         <section>
